src/test/run-pass/early-ret-binop.rs
fn wsucc(n: int) -> int { ({ return n + 1 } == 0); }
fn main() { }
